fix(view): fix headroom.css z-index
Fix overlap between headroom and line highlight styles.

--- a/src/components/headroom.css
+++ b/src/components/headroom.css
@@ -1,3 +1,5 @@
 .headroom--unpinned {
+	position: relative;
+	z-index: 10000;
 	transition: none !important;
 }
